[-] fix missing -lm from unix platform libraries - not all libc's imply this.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -301,7 +301,7 @@ else()
 		endif(APPLE)
 	endif(BUILD_CLIENT)
 	find_package(ZLIB REQUIRED)
-	set(PLATFORM_LIBS -lpthread ${CMAKE_DL_LIBS})
+	set(PLATFORM_LIBS -lpthread -lm ${CMAKE_DL_LIBS})
 	if(APPLE)
 		set(PLATFORM_LIBS "-framework CoreFoundation" ${PLATFORM_LIBS})
 	else()
